--- a/examen/pom.xml
+++ b/examen/pom.xml
@@ -15,6 +15,9 @@
 	<name>examen</name>
 	<description>examen final de software</description>
 	<properties>
+		<sonar.projectKey>cs2901-2021-1_EFinalGuille</sonar.projectKey>
+		<sonar.organization>cs2901-2021-1</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
